--- a/rucio.cfg
+++ b/rucio.cfg
@@ -4,6 +4,6 @@ auth_host = https://voatlasrucio-auth-prod.cern.ch:443
 auth_type = x509
 client_cert = /.globus/usercert.pem
 client_key = /.globus/userkey.pem
-ca_cert = /etc/grid-security/certificates/cilogon-osg.pem
+ca_cert = /etc/pki/tls/certs/ca-bundle.crt
 request_retries = 3
 account = ivukotic
