--- a/kube/did-finder.yaml
+++ b/kube/did-finder.yaml
@@ -1,36 +1,55 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: did-finder
   namespace: servicex
   labels:
     app: did-finder
 spec:
-  volumes:
-  - name: x509-certs-volume
-    secret:
-      secretName: cert-secret
-      items:
-      - key: userkey
-        path: userkey.pem
-        mode: 256 
-      - key: usercert
-        path: usercert.pem
+  replicas: 1
+  selector:
+    matchLabels:
+      app: did-finder
+  template:
+    metadata:
+      labels:
+        app: did-finder
+    spec:
+      volumes:
+      - name: x509-data
+        emptyDir: {}
+      - name: x509-certs-volume
+        secret:
+          secretName: cert-secret
+          items:
+          - key: userkey
+            path: userkey.pem
+            mode: 256 
+          - key: usercert
+            path: usercert.pem
 
-  containers:
-  - name: did-finder
-    image: sslhep/servicex-did-finder:latest
-    command: ["sleep"]
-    args: ["36500000"]
-    env:
-      - name: RUCIO_CFG_PASSWORD
-        valueFrom:
-          secretKeyRef:
-            name: rucio-secret
-            key: password
-    volumeMounts:
-    - name: x509-certs-volume
-      mountPath: "/.globus/"
-      readOnly: true
+      containers:
+      - name: did-finder
+        image: sslhep/servicex-did-finder:latest
+        command: ["sleep"]
+        args: ["36500000"]
+        volumeMounts:
+        - name: x509-data
+          mountPath: "/etc/grid-security/"
+          readOnly: false
+        - name: x509-certs-volume
+          mountPath: "/etc/grid-certs/"
+          readOnly: true
 
-  restartPolicy: Never
+      - name: x509
+        image: sslhep/servicex-did-finder:latest
+        command: ["/run_x509_updater.sh"]
+        volumeMounts:
+        - name: x509-data
+          mountPath: "/etc/grid-security/"
+          readOnly: false
+        - name: x509-certs-volume
+          mountPath: "/etc/grid-certs/"
+          readOnly: true
+          
+
