--- a/kube/did-finder.yaml
+++ b/kube/did-finder.yaml
@@ -31,6 +31,7 @@ spec:
       containers:
       - name: did-finder
         image: sslhep/servicex-did-finder:latest
+        imagePullPolicy: "Always"
         command: ["sleep"]
         args: ["36500000"]
         volumeMounts:
@@ -43,6 +44,7 @@ spec:
 
       - name: x509
         image: sslhep/servicex-did-finder:latest
+        imagePullPolicy: "Always"
         command: ["/run_x509_updater.sh"]
         volumeMounts:
         - name: x509-data
