--- a/kube/did-finder.yaml
+++ b/kube/did-finder.yaml
@@ -32,8 +32,8 @@ spec:
       - name: did-finder
         image: sslhep/servicex-did-finder:latest
         imagePullPolicy: "Always"
-        command: ["sleep"]
-        args: ["36500000"]
+        command: ["python"]
+        args: ["/request_lookup.py"]
         volumeMounts:
         - name: x509-data
           mountPath: "/etc/grid-security/"
