Make DID-Finder runable from Command line

--- a/config/rucio.template.cfg
+++ b/config/rucio.template.cfg
@@ -2,10 +2,8 @@
 rucio_host = https://voatlasrucio-server-prod.cern.ch:443
 auth_host = https://voatlasrucio-auth-prod.cern.ch:443
 auth_type = x509_proxy
-# client_cert = /.globus/usercert.pem
-# client_key = /.globus/userkey.pem
 ca_cert = /etc/pki/tls/certs/ca-bundle.crt
-account = ivukotic
+account = [[[[Put your CERN Username Here]]]
 client_x509_proxy = $X509_USER_PROXY
 request_retries = 3
 
