updates for new API

--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,5 @@
 {
     "TESTING": false,
-    "SITENAME": "servicex.slateci.net",
+    "SITENAME": "servicex-frontend.uc.ssl-hep.org",
     "SITE": "MWT2"
 }
