--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,7 +5,37 @@ on:
   pull_request:
 
 jobs:
+  test:
+    strategy:
+      matrix:
+        python-version: [3.7, 3.8]
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@master
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip setuptools wheel
+        python -m pip install -r requirements.txt
+        python -m pip install -r requirements_test.txt
+        pip list
+    - name: Lint with Flake8
+      run: |
+        flake8
+    - name: Test with pytest
+      run: |
+        PYTHONPATH=./src:$PYTHONPATH coverage run -m pytest -r sx
+    - name: Report coverage with Codecov
+      if: github.event_name == 'push'
+      run: |
+        codecov --token=${{ secrets.CODECOV_TOKEN }}
+
   publish:
+    needs: test
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
