--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,6 +2,10 @@ name: CI/CD
 
 on:
   push:
+    branches:
+      - "*"
+    tags:
+      - "*"
   pull_request:
 
 jobs:
@@ -40,10 +44,15 @@ jobs:
     steps:
     - uses: actions/checkout@master
 
+    - name: Extract tag name
+      shell: bash
+      run: echo "##[set-output name=imagetag;]$(echo ${GITHUB_REF##*/})"
+      id: extract_tag_name
+
     - name: Build DID-Finder Image
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
-        name: sslhep/servicex-did-finder
+        name: sslhep/servicex-did-finder:${{ steps.extract_tag_name.outputs.imagetag }}
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         tag: "${GITHUB_REF##*/}"
