Fix up what version of the push we are running

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,11 +32,11 @@ jobs:
         flake8
     - name: Test with pytest
       run: |
-        PYTHONPATH=./src:$PYTHONPATH coverage run -m pytest -r sx
+        PYTHONPATH=./src:$PYTHONPATH coverage run -m pytest -r servicex
         coverage xml
     - name: Report coverage using codecov
       if: github.event_name == 'push' && matrix.python-version == 3.8
-      uses: codecov/codecov-action@v1
+      uses: codecov/codecov-action
       with:
         file: ./coverage.xml # optional
         flags: unittests # optional
