--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,7 +37,7 @@ jobs:
         pytest --cov=./tests --cov-report=xml
     - name: Report coverage using codecov
       if: github.event_name == 'push' && matrix.python-version == 3.8
-      uses: codecov/codecov-action
+      uses: codecov/codecov-action@v1
       with:
         file: ./coverage.xml # optional
         flags: unittests # optional
