Mark verbose to debug

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,6 +41,7 @@ jobs:
       with:
         file: ./coverage.xml # optional
         flags: unittests # optional
+        verbose: true
 
   publish:
     needs: test
