Report coverage of source code, not test directory

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,7 +34,7 @@ jobs:
       run: |
         pip install pytest-cov
         export PYTHONPATH=./src:$PYTHONPATH
-        pytest --cov=./tests --cov-report=xml
+        pytest --cov=./src --cov-report=xml
     - name: Report coverage using codecov
       if: github.event_name == 'push' && matrix.python-version == 3.8
       uses: codecov/codecov-action@v1
