Freeze dependencies for V1.0.0-RC.4

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,26 @@
-rucio-clients>=1.26.1
+attrs==21.2.0
+certifi==2021.10.8
+chardet==3.0.4
+decorator==5.1.0
+dogpile.cache==1.1.1
+idna==2.10
+importlib-metadata==4.8.1
+j2cli==0.3.10
+Jinja2==3.0.2
+jsonschema==4.0.0a6
+make-it-sync==1.0.0
+MarkupSafe==2.0.1
+pbr==5.6.0
 pika==1.1.0
-servicex-did-finder-lib>=1.0.1
-xmltodict
-wheel
+pyrsistent==0.18.0
+PyYAML==6.0
+requests==2.25.0
+rucio-clients==1.26.7
+servicex-did-finder-lib==1.0.1
+six==1.15.0
+stevedore==3.5.0
+tabulate==0.8.9
+typing-extensions==3.10.0.2
+urllib3==1.26.5
+xmltodict==0.12.0
+zipp==3.6.0
