--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 rucio-clients>=1.26.1
 pika==1.1.0
-servicex-did-finder-lib>=1.1a5
+# servicex-did-finder-lib>=1.1a5
+servicex-did-finder-lib>=1.1.1b1
 xmltodict
 wheel
 pymemcache>=3.5.1
